# worldcup-sim

./: .gitattributes  .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  update.yml
engine/: pyproject.toml
engine/data/: params.json  results.json
engine/scripts/: gen_static_data.py
engine/src/wcsim/: __init__.py  cli.py  config.py  pipeline.py
engine/src/wcsim/backtest/: __init__.py  baselines.py  gbm.py  metrics.py  performance.py  runner.py
engine/src/wcsim/data/: __init__.py  fetch.py  normalize.py  results_store.py
engine/src/wcsim/export/: __init__.py  writer.py
engine/src/wcsim/models/: __init__.py  bundle.py  dc_attack.py  dc_elo.py  odds.py  odds_feed.py  poisson.py  score_model.py
engine/src/wcsim/ratings/: __init__.py  elo.py  penalty.py
engine/src/wcsim/tournament/: __init__.py  annexe_c.py  annexe_c_data.py  fixtures_data.py  simulate.py  structure.py  third_place.py  tiebreak.py
engine/tests/: test_annexe_c.py  test_dc_attack.py  test_dc_fit.py  test_elo.py  test_export.py  test_gbm.py  test_normalize.py  test_odds_baseline.py  test_odds_feed.py  test_penalty.py  test_performance.py  test_pipeline.py  test_poisson.py  test_results_store.py  test_simulate.py  test_structure.py  test_tiebreak.py
web/: .prettierignore  eslint.config.js  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vercel.json  vite.config.ts  vitest.config.ts
web/e2e/: smoke.spec.ts
web/public/data/: evolution.json  groups.json  knockout.json  matches.json  meta.json  (+3 more)
web/src/: App.tsx  index.css
(+97 files in other folders)
