[project]
name = "wcsim"
version = "0.1.0"
description = "2026 世界杯比分预测与全赛程蒙特卡洛模拟引擎"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1",
    "pandas>=2.2",
    "scipy>=1.14",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
]

[project.scripts]
wcsim = "wcsim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wcsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
