[project]
name = "wcsim"
version = "0.1.0"
description = "2026 世界杯比分预测与全赛程蒙特卡洛模拟引擎"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1",
    "pandas>=2.2",
    "scipy>=1.14",
    "requests>=2.32",
]

# 可选依赖：仅 `wcsim gbm-eval` 只读评估需要 xgboost（生产/CI 不装；测试用 importorskip 跳过）
[project.optional-dependencies]
ml = ["xgboost>=2.0"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[project.scripts]
wcsim = "wcsim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wcsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I isort, UP pyupgrade, B bugbear
select = ["E", "F", "I", "UP", "B"]
# 行宽交给 formatter；超长中文注释/字符串不当错误
ignore = ["E501"]
